created login and signup endpoints

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,13 @@
   "author": "Henri Tresor",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0"
   }
