--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,44 +10,21 @@
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
-    "@reduxjs/toolkit": "^1.6.0",
-    "@soulmachines/smwebsdk": "15.7.0",
-    "@stream-io/video-react-sdk": "^1.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/react-curved-text": "^2.0.3",
-    "@types/styled-components": "^5.1.34",
-    "@videosdk.live/react-sdk": "^0.1.90",
     "antd": "^5.17.4",
-    "await-to-js": "^3.0.0",
     "bootstrap": "5.2.0-beta1",
     "color": "^4.2.3",
     "dotenv": "^8.2.0",
-    "framer-motion": "^4.1.17",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "prop-types": "^15.7.2",
     "react": "^18",
-    "react-bootstrap-icons": "^1.10.2",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18",
     "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
-    "react-markdown": "^6.0.2",
-    "react-player": "^2.16.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
-    "react-tooltip": "^4.2.21",
-    "react-youtube": "^7.13.1",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "rehype-sanitize": "^5.0.0",
-    "remark-gfm": "^2.0.0",
-    "styled-components": "^5.3.0",
-    "syllable": "^5.0.0",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -64,6 +41,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
