added google authentication

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.17.4",
     "bootstrap": "5.2.0-beta1",
     "color": "^4.2.3",
@@ -22,9 +23,11 @@
     "react-dom": "^18",
     "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
